bug z-index

--- a/public/css/event.css
+++ b/public/css/event.css
@@ -3,7 +3,6 @@ body,
   padding: 0px;
   margin: 0px;
   width: 100%;
-  overflow-x: hidden;
 }
 
 .row {
